--- a/AngularMaterial/src/app/pages/vehiculo/registrar-vehiculo/registrar-vehiculo.component.html
+++ b/AngularMaterial/src/app/pages/vehiculo/registrar-vehiculo/registrar-vehiculo.component.html
@@ -60,6 +60,7 @@
                 <mat-option value="Camioneta">Camioneta</mat-option>
                 <mat-option value="Furgon">Furgon</mat-option>
                 <mat-option value="Campero">Campero</mat-option>
+                <mat-option value="Carga">Carga</mat-option>
             </mat-select>
         </mat-form-field>
         
