--- a/AngularMaterial/src/app/pages/index/index.component.css
+++ b/AngularMaterial/src/app/pages/index/index.component.css
@@ -67,6 +67,20 @@ mat-card img{
     width: 50%;
 }
 
+.frame {
+    width: 300px;
+    height: 209.5px;
+    border: 3px solid rgba(204, 204, 204, 0);
+    background: rgba(238, 238, 238, 0);
+    margin: auto;
+    padding: 15px 10px;
+}
+
+.img {
+    width: 100%;
+    height: 50%;
+}
+
 .example-header-image {
     background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
     background-size: cover;
