--- a/AngularMaterial/src/app/pages/vehiculo/editar-vehiculo/editar-vehiculo.component.html
+++ b/AngularMaterial/src/app/pages/vehiculo/editar-vehiculo/editar-vehiculo.component.html
@@ -75,6 +75,7 @@
                 <mat-option value="Camioneta">Camioneta</mat-option>
                 <mat-option value="Furgon">Furgon</mat-option>
                 <mat-option value="Campero">Campero</mat-option>
+                <mat-option value="Carga">Carga</mat-option>
             </mat-select>
         </mat-form-field>
         <div *ngIf="form.get('tipoVehiculo').errors && form.get('tipoVehiculo').touched">
