--- a/AngularMaterial/src/app/pages/vehiculo/registrar-vehiculo/registrar-vehiculo.component.css
+++ b/AngularMaterial/src/app/pages/vehiculo/registrar-vehiculo/registrar-vehiculo.component.css
@@ -42,6 +42,10 @@ button {
     flex: 1 1 auto;
 }
 
+td {
+    padding-right: 8px;
+}
+
 .example-container {
     width: auto;
     height: 1000px;
