--- a/AngularMaterial/src/app/pages/vehiculo/registrar-vehiculo/registrar-vehiculo.component.html
+++ b/AngularMaterial/src/app/pages/vehiculo/registrar-vehiculo/registrar-vehiculo.component.html
@@ -5,7 +5,47 @@
 
 <div>
     <form [formGroup]="form" (ngSubmit)="insertVehiculo($event)">
-        <mat-form-field appearance="fill">
+        <table class="example-full-width" cellspacing="0">
+        <tr>
+            <td><mat-form-field class="example-full-width" style="width: 180px;">
+                <mat-label>Placa</mat-label>
+                    <input matInput placeholder="ABC" formControlName="placa" (input)="inputValidator($event)">
+                </mat-form-field>
+                <div *ngIf="form.get('placa').errors && form.get('placa').touched">
+                    <mat-error *ngIf="form.get('placa').hasError('required')">
+                        Es un campo requerido
+                    </mat-error>
+                    <mat-error *ngIf="form.get('placa').hasError('maxlength')">
+                        Campo supera el número de caracteres
+                    </mat-error>
+                    <mat-error *ngIf="form.get('placa').hasError('minlength')">
+                        Campo es inferior al número de caracteres
+                    </mat-error>
+                </div>
+            </td>
+            <td>
+                <label style="margin: 5px;">-</label>
+            </td>
+            <td><mat-form-field class="example-full-width" style="width: 180px;">
+                <mat-label>Placa</mat-label>
+                    <input type="text" matInput placeholder="222" formControlName="placanum" (input)="inputValidatorNum($event)">
+                </mat-form-field>
+                <div *ngIf="form.get('placanum').errors && form.get('placanum').touched">
+                    <mat-error *ngIf="form.get('placanum').hasError('required')">
+                        Es un campo requerido
+                    </mat-error>
+                    <mat-error *ngIf="form.get('placanum').hasError('maxlength')">
+                        Campo supera el número de caracteres
+                    </mat-error>
+                    <mat-error *ngIf="form.get('placanum').hasError('minlength')">
+                        Campo es inferior al número de caracteres
+                    </mat-error>
+                </div>
+            </td>
+        </tr>
+        </table>
+
+        <!-- <mat-form-field appearance="fill">
             <mat-label>Placa</mat-label>
             <input matInput type="text" placeholder="Ej:abc-123" formControlName="placa">
         </mat-form-field>
@@ -16,7 +56,7 @@
             <p *ngIf="form.get('placa').hasError('required')">
                 Es un campo requerido
             </p>
-        </div>
+        </div> -->
 
         <mat-form-field appearance="fill">
             <mat-label>Marca</mat-label>
