--- a/AngularMaterial/src/app/app.component.html
+++ b/AngularMaterial/src/app/app.component.html
@@ -28,13 +28,13 @@
   </button>
 
   <mat-menu #menu="matMenu">
-    <ng-container *ngIf="this.isLogged">
+    <ng-container *ngIf="this.login.isLogged()">
       <button mat-menu-item routerLink="/buscar">
         <mat-icon>search</mat-icon>
         <span>Buscar</span>
       </button>
     </ng-container>
-    <ng-container *ngIf="!this.isLogged">
+    <ng-container *ngIf="!this.login.isLogged()">
       <button mat-menu-item routerLink="/registro">
         <mat-icon>account_circle</mat-icon>
         <span>Registro</span>
@@ -49,14 +49,14 @@
 
 <mat-drawer-container class="example-container">
   <mat-drawer #drawer class="example-sidenav" mode="side">
-    <ng-container *ngIf="!this.isLogged">
+    <ng-container *ngIf="!this.login.isLogged()">
       <button mat-menu-item routerLink="/login">
         <mat-icon>login</mat-icon>
         <span>Login</span>
       </button>
     </ng-container>
 
-    <ng-container *ngIf="this.isLogged">
+    <ng-container *ngIf="this.login.isLogged()">
       <button mat-menu-item (click)="logout()">
         <mat-icon>logout</mat-icon>
         <span>Cerrar sesión</span>
@@ -70,6 +70,11 @@
       <button mat-menu-item routerLink="/vehiculo">
         <mat-icon>garage</mat-icon>
         <span>Vehículos</span>
+      </button>
+
+      <button mat-menu-item routerLink="/usuario">
+        <mat-icon>account_circle</mat-icon>
+        <span>Usuario</span>
       </button>
     </ng-container>
 
