--- a/AngularMaterial/src/app/pages/index/index.component.html
+++ b/AngularMaterial/src/app/pages/index/index.component.html
@@ -8,7 +8,7 @@
 
     <div class="row">
         <div class="column">
-            <ng-container *ngIf="this.isLogged">
+            <ng-container *ngIf="this.login.isLogged()">
                 <mat-card class="example-card">
                     <mat-card-header>
                         <!-- <div mat-card-avatar class="example-header-image"></div> -->
@@ -31,7 +31,7 @@
             </ng-container>
         </div>
         <div class="column">
-            <ng-container *ngIf="!this.isLogged">
+            <ng-container *ngIf="!this.login.isLogged()">
                 <mat-card class="example-card">
                     <mat-card-header>
                         <!-- <div mat-card-avatar class="example-header-image"></div> -->
@@ -56,7 +56,7 @@
             </ng-container>
         </div>
         <div class="column">
-            <ng-container *ngIf="this.isLogged">
+            <ng-container *ngIf="this.login.isLogged()">
                 <mat-card class="example-card">
                     <mat-card-header>
                         <!-- <div mat-card-avatar class="example-header-image"></div> -->
