--- a/AngularMaterial/src/app/pages/usuario/usuario.component.html
+++ b/AngularMaterial/src/app/pages/usuario/usuario.component.html
@@ -1,1 +1,62 @@
-<p>usuario works!</p>
+<div *ngIf="loader.isLoading | async" class="loader-container">
+    <mat-progress-bar color="primary" mode="indeterminate"></mat-progress-bar>
+</div>
+
+<div [hidden]="route.children.length !== 0">
+    <div fxLayout fxLayoutAlign="center center">
+        <mat-form-field fxFlex="40%">
+            <input matInput type="text" (keyup)="doFilter($event.target.value)" placeholder="Filter">
+        </mat-form-field>
+    </div>
+
+    <table mat-table class="mat-elevation-z8" [dataSource]="userList" matSort>
+        <ng-container matColumnDef="nombre">
+            <th id="nombre" mat-header-cell *matHeaderCellDef mat-sort-header>Nombre</th>
+            <td mat-cell *matCellDef="let element">{{element.nombre}}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="apellido">
+            <th id="apellido" mat-header-cell *matHeaderCellDef mat-sort-header>Apellido</th>
+            <td mat-cell *matCellDef="let element">{{element.apellido}}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="nick">
+            <th id="nick" mat-header-cell *matHeaderCellDef mat-sort-header>Nick</th>
+            <td mat-cell *matCellDef="let element">{{element.nick}}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="documento">
+            <th id="documento" mat-header-cell *matHeaderCellDef mat-sort-header>Documento</th>
+            <td mat-cell *matCellDef="let element">{{element.documento}}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="correo">
+            <th id="correo" mat-header-cell *matHeaderCellDef mat-sort-header>Correo</th>
+            <td mat-cell *matCellDef="let element">{{element.correo}}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="rol">
+            <th id="rol" mat-header-cell *matHeaderCellDef mat-sort-header>Rol</th>
+            <td mat-cell *matCellDef="let element">{{element.rol.nombre}}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="ciudad">
+            <th id="ciudad" mat-header-cell *matHeaderCellDef mat-sort-header>Departamento</th>
+            <td mat-cell *matCellDef="let element">{{element.ciudad.departamento.nombre}}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="ciudad2">
+            <th id="ciudad2" mat-header-cell *matHeaderCellDef mat-sort-header>Ciudad</th>
+            <td mat-cell *matCellDef="let element">{{element.ciudad.nombre}}</td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+
+    <mat-paginator [length]="dataSource.totalElements"
+                    [pageSizeOptions]="[3, 5, 10, 25]"
+                    (page)="onPaginateChange($event)"
+                    showFirstLastButtons>
+    </mat-paginator>
+</div>
