--- a/AngularMaterial/src/app/app.component.html
+++ b/AngularMaterial/src/app/app.component.html
@@ -73,8 +73,8 @@
       </button>
 
       <button mat-menu-item routerLink="/usuario">
-        <mat-icon>account_circle</mat-icon>
-        <span>Usuario</span>
+        <mat-icon>manage_accounts</mat-icon>
+        <span>Administrar usuarios</span>
       </button>
     </ng-container>
 
