--- a/AngularMaterial/src/app/pages/index/index.component.html
+++ b/AngularMaterial/src/app/pages/index/index.component.html
@@ -8,7 +8,7 @@
 
     <div class="row">
         <div class="column">
-            <ng-container *ngIf="this.login.isLogged()">
+            <ng-container *ngIf="this.login.isLogged() && this.login.rolType() == 'Administrador'">
                 <mat-card class="example-card">
                     <mat-card-header>
                         <!-- <div mat-card-avatar class="example-header-image"></div> -->
@@ -29,8 +29,51 @@
                     </mat-card-actions>
                 </mat-card>
             </ng-container>
+
+            <ng-container *ngIf="this.login.isLogged() && this.login.rolType() == 'Conductor'">
+                <mat-card class="example-card">
+                    <mat-card-header>
+                        <!-- <div mat-card-avatar class="example-header-image"></div> -->
+                        <mat-card-title>Galeria de vehículos</mat-card-title>
+                        <mat-card-subtitle>Ver galeria</mat-card-subtitle>
+                    </mat-card-header>
+                    <div class="center frame">
+                        <img style="margin-top: 40px;" class="img" src="assets/dream_os.jpg" alt="dream img">
+                    </div>
+                    <mat-card-content>
+                        <p>
+                        En esta sección podrá visualizar una galeria de vehículos.
+                        </p>
+                    </mat-card-content>
+                    <mat-card-actions class="center">
+                        <button mat-raised-button routerLink="/conductor">Acceder</button>
+                    </mat-card-actions>
+                </mat-card>
+            </ng-container>
         </div>
         <div class="column">
+            <ng-container *ngIf="this.login.isLogged() && this.login.rolType() == 'Administrador'">
+                <mat-card class="example-card">
+                    <mat-card-header>
+                        <!-- <div mat-card-avatar class="example-header-image"></div> -->
+                        <mat-card-title>Administrar usuarios</mat-card-title>
+                        <mat-card-subtitle>Ver la lista de conductores registrados</mat-card-subtitle>
+                    </mat-card-header>
+                    <div class="center frame">
+                        <img style="margin-top: 40px;" class="img" src="assets/user_management.png" alt="pickup img">
+                    </div>
+                    <mat-card-content>
+                        <p>
+                        En esta sección podrá visualizar la lista de usuarios registrados hasta el momento
+                        en la plataforma o agregar nuevos usuarios con el rol de conductor.
+                        </p>
+                    </mat-card-content>
+                    <mat-card-actions class="center">
+                        <button mat-raised-button routerLink="/usuario">Acceder</button>
+                    </mat-card-actions>
+                </mat-card>
+            </ng-container>
+
             <ng-container *ngIf="!this.login.isLogged()">
                 <mat-card class="example-card">
                     <mat-card-header>
@@ -56,7 +99,29 @@
             </ng-container>
         </div>
         <div class="column">
-            <ng-container *ngIf="this.login.isLogged()">
+            <ng-container *ngIf="this.login.isLogged() && this.login.rolType() == 'Conductor'">
+                <mat-card class="example-card">
+                    <mat-card-header>
+                        <!-- <div mat-card-avatar class="example-header-image"></div> -->
+                        <mat-card-title>Galeria de paísajes</mat-card-title>
+                        <mat-card-subtitle>Ver galeria</mat-card-subtitle>
+                    </mat-card-header>
+                    <div class="center frame">
+                        <img style="margin-top: 40px;" class="img" src="assets/dream_os.jpg" alt="dream img">
+                    </div>
+                    <mat-card-content>
+                        <p>
+                        En esta sección podrá visualizar una galeria de imágenes que retratan los departamentos
+                        del país.
+                        </p>
+                    </mat-card-content>
+                    <mat-card-actions class="center">
+                        <button mat-raised-button routerLink="/conductor">Acceder</button>
+                    </mat-card-actions>
+                </mat-card>
+            </ng-container>
+
+            <ng-container *ngIf="this.login.isLogged() && this.login.rolType() == 'Administrador'">
                 <mat-card class="example-card">
                     <mat-card-header>
                         <!-- <div mat-card-avatar class="example-header-image"></div> -->
