slide de imágenes

--- a/AngularMaterial/src/app/pages/conductor/conductor.component.html
+++ b/AngularMaterial/src/app/pages/conductor/conductor.component.html
@@ -1,1 +1,9 @@
-<p>conductor works!</p>
+<br>
+<div class="center">
+    <h1>Galería de vehículos</h1>
+</div>
+
+<div style="text-align: center;">
+    <ng-image-slider [images]="imageObject" #nav></ng-image-slider>
+</div>
+
