galería de paísajes

--- a/AngularMaterial/src/app/pages/index/index.component.html
+++ b/AngularMaterial/src/app/pages/index/index.component.html
@@ -38,11 +38,12 @@
                         <mat-card-subtitle>Ver galeria</mat-card-subtitle>
                     </mat-card-header>
                     <div class="center frame">
-                        <img style="margin-top: 40px;" class="img" src="assets/dream_os.jpg" alt="dream img">
+                        <img style="margin-top: 20px;" class="img2" src="assets/car.png" alt="car img">
                     </div>
                     <mat-card-content>
                         <p>
-                        En esta sección podrá visualizar una galeria de vehículos.
+                        En esta sección podrá visualizar una galeria de vehículos sencilla construida con 
+                        la librería para slideshow de imágenes conocidad como "ng-image-slider".
                         </p>
                     </mat-card-content>
                     <mat-card-actions class="center">
@@ -106,8 +107,8 @@
                         <mat-card-title>Galeria de paísajes</mat-card-title>
                         <mat-card-subtitle>Ver galeria</mat-card-subtitle>
                     </mat-card-header>
-                    <div class="center frame">
-                        <img style="margin-top: 40px;" class="img" src="assets/dream_os.jpg" alt="dream img">
+                    <div class="center">
+                        <img mat-card-image class="img" src="assets/colombia.png" alt="colombia img">
                     </div>
                     <mat-card-content>
                         <p>
@@ -116,7 +117,7 @@
                         </p>
                     </mat-card-content>
                     <mat-card-actions class="center">
-                        <button mat-raised-button routerLink="/conductor">Acceder</button>
+                        <button mat-raised-button routerLink="/pais">Acceder</button>
                     </mat-card-actions>
                 </mat-card>
             </ng-container>
