--- a/AngularMaterial/src/app/pages/usuario/usuario.component.html
+++ b/AngularMaterial/src/app/pages/usuario/usuario.component.html
@@ -67,6 +67,15 @@
             <td mat-cell *matCellDef="let element">{{element.ciudad.nombre}}</td>
         </ng-container>
 
+        <ng-container matColumnDef="acciones">
+            <th id="acciones" mat-header-cell *matHeaderCellDef mat-sort-header>Acciones</th>
+            <td mat-cell *matCellDef="let element">
+                <button mat-icon-button (click)="deleteUser(element.idUsuario)">
+                    <mat-icon>person_remove</mat-icon>
+                </button>
+            </td>
+        </ng-container>
+
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
