--- a/AngularMaterial/src/app/pages/usuario/usuario.component.html
+++ b/AngularMaterial/src/app/pages/usuario/usuario.component.html
@@ -70,9 +70,14 @@
         <ng-container matColumnDef="acciones">
             <th id="acciones" mat-header-cell *matHeaderCellDef mat-sort-header>Acciones</th>
             <td mat-cell *matCellDef="let element">
-                <button mat-icon-button (click)="deleteUser(element.idUsuario)">
-                    <mat-icon>person_remove</mat-icon>
-                </button>
+                <div class="row">
+                    <button mat-icon-button [routerLink]="['/usuario/editarusuario', element.idUsuario]">
+                        <mat-icon>edit</mat-icon>
+                    </button>
+                    <button mat-icon-button (click)="deleteUser(element.idUsuario)">
+                        <mat-icon>person_remove</mat-icon>
+                    </button>
+                </div>
             </td>
         </ng-container>
 
