--- a/AngularMaterial/src/app/pages/confirmacion-dialog/confirmacion-dialog.component.html
+++ b/AngularMaterial/src/app/pages/confirmacion-dialog/confirmacion-dialog.component.html
@@ -1,6 +1,6 @@
-<h1 mat-dialog-title>Confirm</h1>
+<h1 mat-dialog-title>¿Eliminar conductor?</h1>
 <div mat-dialog-content>{{confirmMessage}}</div>
 <div mat-dialog-actions>
-    <button mat-button style="color: #fff;background-color: #c02525;" (click)="dialogRef.close(true)">Confirm</button>
-    <button mat-button (click)="dialogRef.close(false)">Cancel</button>
+    <button mat-button style="color: #fff;background-color: #c02525;" (click)="dialogRef.close(true)">Eliminar</button>
+    <button mat-button (click)="dialogRef.close(false)">Cancelar</button>
 </div>
