--- a/AngularMaterial/src/app/pages/vehiculo/conductores-asociados/conductores-asociados.component.html
+++ b/AngularMaterial/src/app/pages/vehiculo/conductores-asociados/conductores-asociados.component.html
@@ -2,31 +2,14 @@
     <mat-progress-bar color="primary" mode="indeterminate"></mat-progress-bar>
 </div>
 
-<div class="row" >
-    <div class="column">
-
-    </div>
-    <div class="column" [hidden]="route.children.length !== 0">
-        <h2 class="center">Ver lista de conductores</h2>
-    </div>
-    <div class="column" [hidden]="route.children.length !== 0">
-        <div style="text-align: center;">
-            <button mat-icon-button routerLink="/usuario/registrarusuario"> 
-                <mat-icon>person_add</mat-icon>
-                <span>Registrar usuario</span>
-            </button>
-        </div>
-    </div>
-</div>
-
-<div [hidden]="route.children.length !== 0">
+<div>
     <div fxLayout fxLayoutAlign="center center">
         <mat-form-field fxFlex="40%">
             <input matInput type="text" (keyup)="doFilter($event.target.value)" placeholder="Filter">
         </mat-form-field>
     </div>
 
-    <table mat-table class="mat-elevation-z8" [dataSource]="userList" matSort>
+    <table mat-table class="mat-elevation-z8" [dataSource]="dataSource" matSort>
         <ng-container matColumnDef="nombre">
             <th id="nombre" mat-header-cell *matHeaderCellDef mat-sort-header>Nombre</th>
             <td mat-cell *matCellDef="let element">{{element.nombre}}</td>
@@ -67,39 +50,14 @@
             <td mat-cell *matCellDef="let element">{{element.ciudad.nombre}}</td>
         </ng-container>
 
-        <ng-container matColumnDef="acciones">
-            <th id="acciones" mat-header-cell *matHeaderCellDef mat-sort-header>Acciones</th>
-            <td mat-cell *matCellDef="let element">
-                <div class="row">
-                    <button mat-icon-button [routerLink]="['/usuario/editarusuario', element.idUsuario]">
-                        <mat-icon>edit</mat-icon>
-                    </button>
-                    <button mat-icon-button (click)="deleteUser(element.idUsuario)">
-                        <mat-icon>person_remove</mat-icon>
-                    </button>
-                </div>
-            </td>
-        </ng-container>
-
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
-
-    <mat-paginator [length]="dataSource.totalElements"
-                    [pageSizeOptions]="[3, 5, 10, 25]"
-                    (page)="onPaginateChange($event)"
-                    showFirstLastButtons>
-    </mat-paginator>
+    <mat-paginator #citiesPaginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
 </div>
 
-<div class="row">
-    <div class="column">
-
-    </div>
-    <div class="column">
-        <router-outlet></router-outlet>
-    </div>
-    <div class="column">
-
-    </div>
+<div class="center">
+    <button mat-raised-button routerLink="/vehiculo">
+        Volver
+    </button>
 </div>
