--- a/AngularMaterial/src/app/pages/vehiculo/conductores-no-asociados/conductores-no-asociados.component.html
+++ b/AngularMaterial/src/app/pages/vehiculo/conductores-no-asociados/conductores-no-asociados.component.html
@@ -3,7 +3,7 @@
 </div>
 
 <div>
-    <h1 style="text-align: center;">Conductores asociados al vehículo</h1>
+    <h1 style="text-align: center;">Conductores no asociados al vehículo</h1>
     <br>
 
     <div fxLayout fxLayoutAlign="center center">
@@ -23,6 +23,11 @@
             <td mat-cell *matCellDef="let element">{{element.apellido}}</td>
         </ng-container>
 
+        <ng-container matColumnDef="documento">
+            <th id="documento" mat-header-cell *matHeaderCellDef mat-sort-header>Documento</th>
+            <td mat-cell *matCellDef="let element">{{element.documento}}</td>
+        </ng-container>
+
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
@@ -34,3 +39,4 @@
         Volver
     </button>
 </div>
+
