--- a/AngularMaterial/src/app/pages/usuario/usuario.component.html
+++ b/AngularMaterial/src/app/pages/usuario/usuario.component.html
@@ -27,6 +27,11 @@
     </div>
 
     <table mat-table class="mat-elevation-z8" [dataSource]="userList" matSort>
+        <ng-container matColumnDef="idUsuario">
+            <th id="idUsuario" mat-header-cell *matHeaderCellDef mat-sort-header>ID</th>
+            <td mat-cell *matCellDef="let element">{{element.idUsuario}}</td>
+        </ng-container>
+
         <ng-container matColumnDef="nombre">
             <th id="nombre" mat-header-cell *matHeaderCellDef mat-sort-header>Nombre</th>
             <td mat-cell *matCellDef="let element">{{element.nombre}}</td>
