--- a/AngularMaterial/src/app/pages/vehiculo/conductores-asociados/conductores-asociados.component.html
+++ b/AngularMaterial/src/app/pages/vehiculo/conductores-asociados/conductores-asociados.component.html
@@ -23,6 +23,15 @@
             <td mat-cell *matCellDef="let element">{{element.apellido}}</td>
         </ng-container>
 
+        <ng-container matColumnDef="accion">
+            <th id="accion" mat-header-cell *matHeaderCellDef style="text-align: center;">Acción</th>
+            <td mat-cell *matCellDef="let element" style="text-align: center;">
+                <button mat-icon-button (click)="desasociarConductor(element.idUsuario)">
+                    <mat-icon>link_off</mat-icon>
+                </button>
+            </td>
+        </ng-container>
+
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
