--- a/AngularMaterial/src/app/pages/vehiculo/vehiculo.component.html
+++ b/AngularMaterial/src/app/pages/vehiculo/vehiculo.component.html
@@ -28,6 +28,11 @@
 
     <table mat-table class="mat-elevation-z8" [dataSource]="vehicleList" matSort [hidden]="route.children.length !== 0">
 
+        <ng-container matColumnDef="idVehiculo">
+            <th id="idVehiculo" mat-header-cell *matHeaderCellDef mat-sort-header>ID</th>
+            <td mat-cell *matCellDef="let element">{{element.idVehiculo}}</td>
+        </ng-container>
+
         <ng-container matColumnDef="placa">
             <th id="placa" mat-header-cell *matHeaderCellDef mat-sort-header>Placa</th>
             <td mat-cell *matCellDef="let element">{{element.placa}}</td>
